Add endpoint to list supported versions

--- a/libs/wire-api-federation/wire-api-federation.cabal
+++ b/libs/wire-api-federation/wire-api-federation.cabal
@@ -30,6 +30,8 @@ library
       Wire.API.Federation.Error
       Wire.API.Federation.Event
       Wire.API.Federation.Version
+      Wire.API.Federation.Version.Info
+      Wire.API.Federation.Version.TH
   other-modules:
       Paths_wire_api_federation
   hs-source-dirs:
@@ -99,6 +101,7 @@ library
     , servant-client
     , servant-client-core
     , servant-server
+    , singletons
     , sop-core
     , streaming-commons
     , template-haskell
@@ -199,6 +202,7 @@ test-suite spec
     , servant-client
     , servant-client-core
     , servant-server
+    , singletons
     , sop-core
     , streaming-commons
     , template-haskell
