--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -597,6 +597,7 @@ executable galley-schema
       V56_GuestLinksTeamFeatureStatus
       V57_GuestLinksLockStatus
       V58_ConversationAccessRoleV2
+      V59_FileSharingLockStatus
       Paths_galley
   hs-source-dirs:
       schema/src
