fix integration tests

--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -60,6 +60,7 @@ settings:
     fileSharing:
       defaults:
         status: enabled
+        lockStatus: unlocked # TODO(leif): make optional
     conferenceCalling:
       defaults:
         status: enabled
