Allow brig's additionalWriteIndex to be on a different ES cluster
This allows migrating to a new ES cluster. Also add docs about how to migrate to
a new cluster using this option.

--- a/services/brig/brig.cabal
+++ b/services/brig/brig.cabal
@@ -505,6 +505,7 @@ executable brig-integration
     , http-client
     , http-client-tls >=0.2
     , http-media
+    , http-reverse-proxy
     , http-types
     , imports
     , lens >=3.9
