--- a/services/brig/package.yaml
+++ b/services/brig/package.yaml
@@ -228,6 +228,7 @@ executables:
     - http-client
     - http-client-tls >=0.2
     - http-media
+    - http-reverse-proxy
     - http-types
     - imports
     - lens >=3.9
