make lock status in server config required, add reference docs

--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -60,6 +60,7 @@ settings:
     fileSharing:
       defaults:
         status: enabled
+        lockStatus: unlocked
     conferenceCalling:
       defaults:
         status: enabled
