--- a/services/galley/package.yaml
+++ b/services/galley/package.yaml
@@ -77,6 +77,7 @@ library:
   - servant-server
   - servant-swagger
   - servant-swagger-ui
+  - singletons
   - sop-core
   - split >=0.2
   - ssl-util >=0.1
@@ -197,6 +198,7 @@ executables:
     - random
     - retry
     - schema-profunctor
+    - singletons
     - servant
     - servant-server
     - servant-swagger
