--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -37,8 +37,11 @@ library
       Wire.API.Message
       Wire.API.Message.Proto
       Wire.API.MLS.CipherSuite
+      Wire.API.MLS.Commit
       Wire.API.MLS.Credential
+      Wire.API.MLS.Group
       Wire.API.MLS.KeyPackage
+      Wire.API.MLS.Message
       Wire.API.MLS.Proposal
       Wire.API.MLS.Serialisation
       Wire.API.MLS.Servant
