--- a/charts/nginx-ingress-controller/values.yaml
+++ b/charts/nginx-ingress-controller/values.yaml
@@ -1,16 +1,18 @@
-# Default values for nginx-ingress-controller
+# FUTUREWORK(hardening): create a dhparam with openssl
+# see https://github.com/kubernetes/ingress-nginx/tree/main/docs/examples/customization/ssl-dh-param
+# and set the controller.config.ssl-dh-param value accordingly. Via helm pre-hook?
 
-# TODO: this should probably be ingress-nginx now
-nginx-ingress:
+# Default values for nginx-ingress-controller
+ingress-nginx:
   controller:
     config:
       # NOTE: These are some sane defaults (compliant to TR-02102-2), you may want to overrride them on your own installation
       # For TR-02102-2 see https://www.bsi.bund.de/SharedDocs/Downloads/EN/BSI/Publications/TechGuidelines/TG02102/BSI-TR-02102-2.html
+      # For an overview, see https://docs.wire.com/how-to/install/tls.html
       # As a Wire employee, for Wire-internal discussions and context see
       # * https://wearezeta.atlassian.net/browse/FS-33
       # * https://wearezeta.atlassian.net/browse/FS-444
-      # TODO add TLS 1.3 ciphers to the list
-      ssl-ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256"
+      ssl-ciphers: "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256"
       ssl-protocols: "TLSv1.2 TLSv1.3"
       http2-max-field-size: 16k
       http2-max-header-size: 32k
