--- a/deploy/services-demo/conf/nginz/nginx.conf
+++ b/deploy/services-demo/conf/nginz/nginx.conf
@@ -194,7 +194,7 @@ http {
         proxy_pass http://brig;
     }
 
-    location /register {
+    location ~* (/v[0-9]+)?/register {
       include common_response_no_zauth.conf;
       proxy_pass http://brig;
     }
