--- a/libs/wire-api/wire-api.cabal
+++ b/libs/wire-api/wire-api.cabal
@@ -406,7 +406,7 @@ test-suite wire-api-golden-tests
       Test.Wire.API.Golden.Generated.SFTServer_user
       Test.Wire.API.Golden.Generated.SimpleMember_user
       Test.Wire.API.Golden.Generated.SimpleMembers_user
-      Test.Wire.API.Golden.Generated.SndFactorPasswordChallengeAction_user
+      Test.Wire.API.Golden.Generated.VerificationAction_user
       Test.Wire.API.Golden.Generated.Team_team
       Test.Wire.API.Golden.Generated.TeamBinding_team
       Test.Wire.API.Golden.Generated.TeamContact_user
