charts/cannon: Add TLS support

--- a/charts/cannon/templates/nginz-secret.yaml
+++ b/charts/cannon/templates/nginz-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cannon-nginz
   labels:
     wireService: cannon-nginz
-    app: nginz
+    app: cannon-nginz
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
