charts/cannon: Only create nginz things when required

--- a/charts/cannon/templates/nginz-certificate-secret.yaml
+++ b/charts/cannon/templates/nginz-certificate-secret.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.tls.useCertManager }}
+{{- if and .Values.service.nginz.enabled (not .Values.tls.useCertManager) }}
 apiVersion: v1
 kind: Secret
 metadata:
