--- a/charts/cannon/templates/nginz-configmap.yaml
+++ b/charts/cannon/templates/nginz-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.service.nginz.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -6,3 +7,4 @@ data:
   nginx.conf: |2
 {{- include "cannon_nginz_nginx.conf" . | indent 4 }}
 {{ (.Files.Glob "conf/static/*").AsConfig | indent 2 }}
+{{- end }}
