--- a/charts/cannon/templates/nginz-secret.yaml
+++ b/charts/cannon/templates/nginz-secret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.service.nginz.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -16,3 +17,4 @@ data:
   {{- with .Values.secrets.nginz }}
   zauth.conf: {{ .zAuth.publicKeys | b64enc | quote }}
   {{- end }}
+{{- end }}
