charts/cannon: Ergonomics

--- a/charts/cannon/templates/nginz-certificate-secret.yaml
+++ b/charts/cannon/templates/nginz-certificate-secret.yaml
@@ -1,8 +1,8 @@
-{{- if and .Values.service.nginz.enabled (not .Values.tls.useCertManager) }}
+{{- if and .Values.service.nginz.enabled (not .Values.service.nginz.certManager.enabled ) }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.tls.secretName }}
+  name: {{ .Values.service.nginz.tls.secretName }}
   labels:
     wireService: cannon-nginz
     app: cannon-nginz
