--- a/charts/cannon/templates/ngniz-service.yaml
+++ b/charts/cannon/templates/ngniz-service.yaml
@@ -15,6 +15,10 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   annotations:
+    {{- if .Values.service.nginz.externalDNS.enabled }}
+    external-dns.alpha.kubernetes.io/ttl: {{ .Values.service.nginz.externalDNS.ttl | quote }}
+    external-dns.alpha.kubernetes.io/hostname: {{ required "Please provide .service.nginz.hostname when .service.nginz.enabled and .service.nginz.externalDNS.enabled are True" .Values.service.nginz.hostname | quote }}
+    {{- end }}
 {{ toYaml .Values.service.nginz.annotations | indent 4 }}
 spec:
   type: LoadBalancer
