--- a/charts/cannon/templates/nginz-certificate.yaml
+++ b/charts/cannon/templates/nginz-certificate.yaml
@@ -1,8 +1,8 @@
-{{- if and .Values.service.nginz.enabled .Values.tls.useCertManager -}}
+{{- if and .Values.service.nginz.enabled .Values.service.nginz.certManager.enabled -}}
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ .Values.tls.certManager.certificate.name }}
+  name: {{ .Values.service.nginz.certManager.certificate.name }}
   namespace: {{ .Release.Namespace }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -10,14 +10,14 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   issuerRef:
-    name: {{ .Values.tls.certManager.issuer.name }}
-    kind: {{ .Values.tls.certManager.issuer.kind }}
+    name: {{ .Values.service.nginz.certManager.issuer.name }}
+    kind: {{ .Values.service.nginz.certManager.issuer.kind }}
   usages:
     - server auth
   duration: 2160h     # 90d, Letsencrypt default; NOTE: changes are ignored by Letsencrypt
   renewBefore: 360h   # 15d
   isCA: false
-  secretName: {{ .Values.tls.secretName }}
+  secretName: {{ .Values.service.nginz.tls.secretName }}
 
   privateKey:
     algorithm: ECDSA
@@ -26,5 +26,5 @@ spec:
     rotationPolicy: Always
 
   dnsNames:
-{{ toYaml (required "Please provide tls.certManager.certificate.dnsNames when tls.useCertManager is True" .Values.tls.certManager.certificate.dnsNames) | indent 4}}
+  - {{ required "Please provide .service.nginz.hostname when .service.nginz.enabled and .service.nginz.certManager.enabled are True" .Values.service.nginz.hostname | quote }}
 {{- end -}}
