charts/nginz-ingress-services: Make websockets optional via ingress

--- a/charts/nginx-ingress-services/templates/certificate.yaml
+++ b/charts/nginx-ingress-services/templates/certificate.yaml
@@ -27,7 +27,9 @@ spec:
 
   dnsNames:
     - {{ .Values.config.dns.https }}
+    {{- if .Values.websockets.enabled }}
     - {{ .Values.config.dns.ssl }}
+    {{- end }}
     {{- if .Values.webapp.enabled }}
     - {{ .Values.config.dns.webapp }}
     {{- end }}
