fix liveness probe

--- a/charts/cannon/templates/statefulset.yaml
+++ b/charts/cannon/templates/statefulset.yaml
@@ -68,7 +68,7 @@ spec:
           httpGet:
             path: /status
             port: {{ .Values.service.nginz.internalPort }}
-            scheme: HTTP
+            scheme: HTTPS
         resources:
 {{ toYaml .Values.resources | indent 12 }}
       {{- end }}
