Define the proposal store effect

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -62,6 +62,7 @@ library
       Galley.Cassandra.Instances
       Galley.Cassandra.LegalHold
       Galley.Cassandra.Paging
+      Galley.Cassandra.Proposal
       Galley.Cassandra.Queries
       Galley.Cassandra.ResultSet
       Galley.Cassandra.SearchVisibility
@@ -91,6 +92,7 @@ library
       Galley.Effects.ListItems
       Galley.Effects.MemberStore
       Galley.Effects.Paging
+      Galley.Effects.ProposalStore
       Galley.Effects.Queue
       Galley.Effects.RemoteConversationListStore
       Galley.Effects.SearchVisibilityStore
