--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -101,6 +101,7 @@ nginx_conf:
       envs:
       - all
       disable_zauth: true
+      unlimited_requests_endpoint: true
     - path: /users
       envs:
       - all
