--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -51,22 +51,40 @@ nginx_conf:
   - /conversations/([^/]*)/call/state
   - /search/top
   - /search/common
+
+  # This value must be a list of strings. Each string is copied verbatim into
+  # the nginx.conf after the default 'limit_req_zone' directives. This should be
+  # used to create request zones which can then be specified in
+  # 'upstreams.<upstream>.<n>.specific_user_rate_limit'.
+  user_rate_limit_request_zones:
+    - limit_req_zone $rate_limited_by_zuser zone=reqs_per_user_signatures:12m rate=10r/m;
+
   # The origins from which we allow CORS requests. These are combined with
   # 'external_env_domain' to form a full url
   allowlisted_origins:
     - webapp
     - teams
     - account
+
   # The origins from which we allow CORS requests at random ports. This is
   # useful for testing with HTTP proxies and should not be used in production.
   # The list entries must be full hostnames (they are **not** combined with
   # 'external_env_domain'). http and https URLs are allow listed.
   randomport_allowlisted_origins: [] # default is empty by intention
+
   # Add 'cannon' to 'ignored_upstreams' if you wish to make use of separate
-  # network traffic to cannon-with-its-own-nginz
-  # See also "Separate incoming websocket network traffic from the rest of the
-  # https traffic" section in the docs.
+  # network traffic to cannon-with-its-own-nginz See also "Separate incoming
+  # websocket network traffic from the rest of the https traffic" section in the
+  # docs.
   ignored_upstreams: []
+
+  # If an upstream runs in a different namespace than nginz, its namespace must
+  # be specified here otherwise nginz_disco will fail to find the upstream and
+  # nginx will think that the upstream is down.
+  upstream_namespace: {
+    # galeb: integrations
+  }
+
   upstreams:
     cargohold:
     - path: /conversations/([^/]*)/assets
@@ -481,6 +499,27 @@ nginx_conf:
       - all
       versioned: false
       strip_version: true
+    galeb:
+    - path: /consent
+      envs:
+      - all
+      disable_zauth: true
+      versioned: false
+      strip_version: true
+    - path: /self/consent
+      versioned: false
+      strip_version: true
+    - path: /signature
+      versioned: false
+      specific_user_rate_limit: reqs_per_user_signatures
+      strip_version: true
+    - path: /i/marketo/emails/([^/]*)$
+      disable_zauth: true
+      versioned: false
+      basic_auth: true
+      envs:
+      - staging
+
     calling-test:
     - path: /calling-test
       envs:
