--- a/charts/nginz/templates/swagger-resources-configmap.yaml
+++ b/charts/nginz/templates/swagger-resources-configmap.yaml
@@ -1,7 +1,7 @@
 # Swagger-1.0 JSON to combine swagger-1.0 documents from different services
 apiVersion: v1
 data:
-  reources.json: |2
+  resources.json: |2
     {
         "apiVersion": "1.0",
         "swaggerVersion": "1.2",
